# keyauth-clone

./: Dockerfile  deploy_netlify.py  nixpacks.toml  railway.json
.railway/: railway.json
anti_tamper/: anti_debug.py  encrypted_communication.py  integrity_checker.py  obfuscation.py  vm_detection.py
client/: CMakeLists.txt
client/src/: api.cpp  api.h  encryption.cpp  encryption.h  hwid.cpp  hwid.h  main.cpp  utils.cpp  utils.h
discord_bot/: bot.py  config.py
discord_bot/cogs/: admin.py  keys.py
keygen/: keygen.py  keygen_cli.py
server/: .env.example  .gitignore  Dockerfile  Procfile  config.py  main.py  netlify.toml  requirements.txt
server/admin/templates/: applications.html  base.html  credentials.html  credentials_admin.html  dashboard.html  licenses.html  login.html  logs.html  reseller_apps.html  reseller_dashboard.html  resellers.html  users.html
server/auth/: encryption.py  jwt_handler.py
server/database/: database.py  models.py
server/netlify/functions/: _init.py  api.py
server/routes/: admin_routes.py  auth_routes.py  founder_routes.py  license_routes.py
